[tool.poetry]
name = "es21"
version = "2.1.0"
description = "Electronic S-21"
authors = ["Unviray <unviray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
tinydb = "^4.1.1"
tinydb-serialization = "^2.0.0"
flask-WTF = "^0.14.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
